Firefox layout fix: long list of files pushes its parents including infoView, mainContent, and mapView into overflow - setting a max-height makes it look like Chrome - the Length value is intentionally small to make it work if Session, Result and Site info blocks are displayed - we rely on "overflow: visible" to actually show the content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -473,6 +473,10 @@ input[type="checkbox"] {
 	font-size: 0.8em;
 }
 
+#statistics .propertyList {
+	max-height: 10px;
+}
+
 .fileitem,
 .sectoritem {
 	font-size: .9em;
